Dark mode fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,17 @@
     border-radius: 10px !important;
 }
 
+@media (prefers-color-scheme: dark) {
+    .player-footer-controls div {
+        margin: auto 32px auto 32px;
+        filter: invert(0.9);
+    }
+    
+    .player-footer-controls #volume-control img {
+        filter: invert(0.9);
+    }
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #000000;
@@ -120,7 +131,7 @@ footer {
 
 .player-footer-controls div {
     margin: auto 32px auto 32px;
-    filter: invert(0.9) !important;
+    filter: invert(0.9);
 }
 
 .player-footer-controls #pause-control img {
